# FragSync

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: algorithm_notes.md  product_design.md  roadmap.md  technical_plan.md
examples/: manual_beats.json  sample_timeline.json
scripts/: demo.py
src/: __init__.py  app.py  main.py
src/audio/: __init__.py  beat_detector.py
src/editing/: __init__.py  renderer.py  sync_strategy.py  timeline.py
src/utils/: ffmpeg_utils.py  file_utils.py
src/video/: __init__.py  clip_loader.py  event_detector.py
src/web/: __init__.py  app.js  index.html  styles.css
tests/: test_app.py  test_audio.py  test_timeline.py  test_timeline_sync.py  test_video.py
