[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fps-kill-sync-montage"
version = "0.1.0"
description = "Command-line MVP for syncing FPS kill clips to music beats."
requires-python = ">=3.10"
dependencies = [
  "librosa>=0.10.1",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "PyYAML>=6.0",
  "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.web" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
